# autoreview-tool

./: .coveragerc  .dockerignore  .env.sample  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: tests.yaml
core/: config.py
prompts/: __init__.py
schemas/: endpoints.py
tests/: test_app.py  test_app_functions.py  test_texts.py  test_utils.py
tools/: app_functions.py  redis_client.py  texts.py  utils.py
