[tool.poetry]
name = "autoreview-tool"
version = "0.1.0"
description = "Github autoreview tool using LLM"
authors = ["wonsky <pidborskii17@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygithub = "2.5.0"
redis = "5.2.1"
openai = "1.59.5"
langchain-openai = "0.2.14"
langchain-ollama = "0.2.2"
pydantic-settings = "2.7.1"
langchain = "0.3.14"
langchain-community = "0.3.14"
fastapi = "0.115.6"
uvicorn = "0.34.0"
pytest = "8.3.4"
pytest-mock = "3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
